--- a/style/main.css
+++ b/style/main.css
@@ -451,6 +451,20 @@ thead {
   content: "Score";
   position: absolute;
 }
+.block.scoreSignil {
+  background: #4074ff;
+  width: 500px;
+  text-align: right;
+  padding-top: 0em;
+  line-height: 90px;
+  padding-right: 20px;
+  height: 100px;
+  font-size: 3em;
+  text-shadow: 2px 3px 0px rgba(0,0,0,0.3);
+}
+.block.scoreSignil:before {
+  content: "SiGnil";
+}
 .block.acc {
   background: #abbc38;
   width: 50%;
